2010-03-07  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Simon Hausmann.

        Small performance fix in the QScriptConverter::toString().

        The QByteArray was replaced by the QVarLengthArray which doesn't
        have to allocate any memory on heap.

        [Qt] QScriptConverter::toString() should use QVarLengthArray instead of QByteArray
        https://bugs.webkit.org/show_bug.cgi?id=35577

        * qt/api/qscriptconverter_p.h:
        (QScriptConverter::toString):

Canonical link: https://commits.webkit.org/46931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55634 268f45cc-cd09-0410-ab3c-d52691b4dbfc